Making small fixes when checking the layout for content overflow

--- a/src/styles/blocks/page-footer.less
+++ b/src/styles/blocks/page-footer.less
@@ -108,10 +108,10 @@
   }
 
   &__nav-link {
-    height: 22px;
+    min-height: 22px;
 
     @media @bw768 {
-      height: 19px;
+      min-height: 19px;
     }
   }
 
